# faking

./: 404.html  Cargo.toml  LICENSE_MIT  README.md  README_wasm-pack.md  index.html  rustfmt.toml
.github/: github-pages.yml
.github/workflows/: github-pages.yml
API/: animals.html
API/business/: appliances.html  business.html  commerce.html  industry_segments.html  marketing.html
_next/static/-XljWjeMyxSnJ5I2Lvx0Y/: _buildManifest.js
_next/static/0G3ARqKqe0Y5XI84vRFnr/: _buildManifest.js
_next/static/0xIHoyG3pWBtSQtudXDjo/: _buildManifest.js
_next/static/1VsLSKL_ZYaZ6fQ3Th_Qd/: _buildManifest.js
_next/static/41O13n1XAI7ygjKY1umqI/: _buildManifest.js
_next/static/4w7p3V1B1OkmenvAPvd9Q/: _buildManifest.js
_next/static/5kPq74Ez_MhrqSICeIMro/: _buildManifest.js
_next/static/7wEirJODe_-iQaVEH_7Ok/: _buildManifest.js
_next/static/85fSRxS23LErrd9cWFfrt/: _buildManifest.js
_next/static/BZWzZYkCx3Un9jifPNL-1/: _buildManifest.js
_next/static/CV1OaAs5EOrFF2wWTwgKA/: _buildManifest.js
_next/static/DJWosg3wBF7cHmV316J1s/: _buildManifest.js
_next/static/FcrKisD-Poa5WJTH0xTcF/: _buildManifest.js
_next/static/H6XXGDPp33aVFO91z_05W/: _buildManifest.js
_next/static/Ig7kLuX2XJxQsnxyB0zMD/: _buildManifest.js
_next/static/L2SCaldx6nuF0GZyQccsV/: _buildManifest.js
_next/static/MH6hPol5yv-x7kKY11q6I/: _buildManifest.js
_next/static/MSv9FXGVCnvsEyqq2V5We/: _buildManifest.js
_next/static/OXA-xOyzU3uxKeF5MHl7H/: _buildManifest.js
_next/static/PKCoYMifjHGt779eec_Ba/: _buildManifest.js
_next/static/Q_S6cXCfdXgNp9K7v9B9k/: _buildManifest.js
_next/static/Sbp0-4HLqhAX2QAjS9ICO/: _buildManifest.js
_next/static/TtQRHNf_A1Ju1FxCQC46i/: _buildManifest.js
_next/static/UAC57iSFFY8TKH7US5wv6/: _buildManifest.js
_next/static/UL-yabnsTkcONANBSDNaT/: _buildManifest.js
_next/static/ULs5HL5HTvfZXBff7PKiv/: _buildManifest.js
_next/static/X09lhbaaULGpA-l5JHn5F/: _buildManifest.js
_next/static/XTOp4ymKn_lEXWrowXh-2/: _buildManifest.js
_next/static/Z-3_D9vyiCFcTGs1E5Z3L/: _buildManifest.js
_next/static/chunks/: 796-1b19a47b39d26d8f.js  796-33265035e6d604cf.js  796-38203241acbd56f0.js  796-d6d0c4c3681c71ab.js  framework-ee69232081ef099e.js  main-aefbb56367c0414c.js  nextra-data-en-US.json  webpack-3229c743c8b30550.js
_next/static/cknWid6Y6tVgpnw6OLeMU/: _buildManifest.js
_next/static/eF2ZfpibmZ_hUs2u66ckV/: _buildManifest.js
_next/static/efA7yse4uxUItzN5scSvr/: _buildManifest.js
docs/: README.md  next.config.js  package.json  pnpm-lock.yaml  theme.config.tsx
docs/pages/: _meta.json  index.mdx
src/: lib.rs
src/data/: mod.rs
src/locales/: mod.rs
src/utils/: seeder.rs
(+566 files in other folders)
