[package]
name = "data-faking"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# rand = { version = "0.8.5", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4.26", features = ["serde"] }
bitcoin = { version = "0.31.0", features = ["rand-std"] }
rand = "0.8.5"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
uuid = { version = "1.6.1", features = [
    "fast-rng",
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
] }
lazy_static = "1.4.0"
rand_isaac = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
